--- a/Proeject_1/food.html
+++ b/Proeject_1/food.html
@@ -20,6 +20,8 @@
 
     <link rel="stylesheet" href="./assets/styles/food.css">
     <link rel="stylesheet" href="./assets/styles/food-style.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/styles-food-2.css"> -->
+    <!-- <link rel="stylesheet" href="./assets/styles/food-style-3.css"> -->
 
     <link rel="stylesheet" href="./assets/styles/food-responsive.css">
 
@@ -28,7 +30,7 @@
 
 <body>
     <main>
-        <section id="category" class="wrapper">
+        <section class="wrapper section--category">
             
                 <div class="title">
                     <h3 class="title__content">Food near me</h3>
@@ -44,6 +46,8 @@
                     </div>
                     <img class="category__image" src="./assets/img/pizza.png" alt="anh mon an">
                 </div>
+
+                
 
                 <div class="category">
                     <div class="category__content">
